--- a/Vizio(H2).html
+++ b/Vizio(H2).html
@@ -559,43 +559,19 @@ munkafolyamatában.</p>
 
 			<td width="33%">
 
-      <p>Magyarázat: Az érintett típusa</p>
+      <p>BETYÁRBRIGANTIK</p>
 
 			</td>
 
 			<td width="33%">
 
-      <p>Magyarázat: Milyen köze van az alkalmazáshoz?</p>
+      <p>Felelős a Janus rendszer tervezéséért, fejlesztéséért és hibajavításáért.</p>
 
 			</td>
 
 			<td width="33%">
 
-      <p>Magyarázat: Milyen szerepet játszik a fejlesztésben?</p>
-
-			</td>
-
-		</tr>
-
-		<tr valign="top">
-
-			<td width="33%">
-
-      <p>Példa: webmester</p>
-
-			</td>
-
-			<td width="33%">
-
-      <p>Példa: Karbantartja és aktualizálja a honlapot, segít a
-				felhasználóknak.</p>
-
-			</td>
-
-			<td width="33%">
-
-      <p>Példa: Bejegyzi a weblapot a szolgáltatónál, tartalommal
-				feltölti és teszteli az alkalmazást.</p>
+      <p>Megvalósítja a funkciókat, karbantartja a rendszert és fejleszti a felhasználói élményt.</p>
 
 			</td>
 
@@ -605,25 +581,19 @@ munkafolyamatában.</p>
 
 			<td width="33%">
 
-      <p><br>
-
-				</p>
+      <p>Informatikai központ</p>
 
 			</td>
 
 			<td width="33%">
 
-      <p><br>
-
-				</p>
+      <p>Üzemelteti a szervereket, biztonsági mentéseket végez és technikai támogatást nyújt.</p>
 
 			</td>
 
 			<td width="33%">
 
-      <p><br>
-
-				</p>
+      <p>Felügyeli a rendszer működését, kezeli a hozzáféréseket.</p>
 
 			</td>
 
@@ -633,25 +603,41 @@ munkafolyamatában.</p>
 
 			<td width="33%">
 
-      <p><br>
-
-				</p>
+      <p>Tanulmányi osztály</p>
 
 			</td>
 
 			<td width="33%">
 
-      <p><br>
-
-				</p>
+      <p>A hallgatói és oktatói adatok ellenőrzését és adminisztrációját végzi.</p>
 
 			</td>
 
 			<td width="33%">
 
-      <p><br>
+      <p>Kapcsolatot tart a fejlesztőkkel és felügyeli az adatpontosságot.</p>
 
-				</p>
+			</td>
+
+		</tr>
+
+		<tr valign="top">
+
+			<td width="33%">
+
+      <p>Intézményvezetés</p>
+
+			</td>
+
+			<td width="33%">
+
+      <p>naprakész statisztikai adatokra és jelentésekre támaszkodik</p>
+
+			</td>
+
+			<td width="33%">
+
+      <p>hogy megalapozott döntéseket hozhasson az oktatási és pénzügyi folyamatok terén.</p>
 
 			</td>
 
@@ -705,42 +691,19 @@ munkafolyamatában.</p>
 
 			<td width="33%">
 
-      <p>Magyarázat: A felhasználó típusa</p>
+      <p>Hallgató</p>
 
 			</td>
 
 			<td width="33%">
 
-      <p>Magyarázat: Mit reprezentál az alkalmazással kapcsolatban?</p>
+      <p>Beiratkozik kurzusokra, jelentkezik vizsgákra, és megtekinti az eredményeit.</p>
 
 			</td>
 
 			<td width="33%">
 
-      <p>Magyarázat: Melyik illetékes reprezentálja ebben a
-				fejlesztésben?</p>
-
-			</td>
-
-		</tr>
-
-		<tr valign="top">
-
-			<td width="33%">
-
-      <p>Példa: tartalom karbantartó</p>
-
-			</td>
-
-			<td width="33%">
-
-      <p>Példa: site adminisztrátor</p>
-
-			</td>
-
-			<td width="33%">
-
-      <p>Példa: a webmester feladat</p>
+      <p>Tanulmányi osztály</p>
 
 			</td>
 
@@ -750,25 +713,19 @@ munkafolyamatában.</p>
 
 			<td width="33%">
 
-      <p><br>
-
-				</p>
+      <p>Oktató</p>
 
 			</td>
 
 			<td width="33%">
 
-      <p><br>
-
-				</p>
+      <p>Kurzusokat kezel, hallgatókat értékel és vizsgaidőpontokat állít be.</p>
 
 			</td>
 
 			<td width="33%">
 
-      <p><br>
-
-				</p>
+      <p>Kar/Intézet vezető</p>
 
 			</td>
 
@@ -778,25 +735,41 @@ munkafolyamatában.</p>
 
 			<td width="33%">
 
-      <p><br>
-
-				</p>
+      <p>Adminisztrátor</p>
 
 			</td>
 
 			<td width="33%">
 
-      <p><br>
-
-				</p>
+      <p>Kezeli a felhasználói jogosultságokat és az adatbázis karbantartását.</p>
 
 			</td>
 
 			<td width="33%">
 
-      <p><br>
+      <p>Informatikai központ</p>
 
-				</p>
+			</td>
+
+		</tr>
+
+		<tr valign="top">
+
+			<td width="33%">
+
+      <p>Tanulmányi ügyintéző</p>
+
+			</td>
+
+			<td width="33%">
+
+      <p>Folyamatban lévő hallgatói kérelmeket és beiratkozásokat kezel.</p>
+
+			</td>
+
+			<td width="33%">
+
+      <p>Tanulmányi hivatal</p>
 
 			</td>
 
@@ -814,51 +787,45 @@ munkafolyamatában.</p>
 <h2><a name="33"></a>3.3 Felhasználói környezet</h2>
 
 <p>
-	Az alkalmazás célfelhasználói egyetemista diákokok és tanárok.</p>
-
-<ul>
-
-	<li>
-		<p>Minden olyan okos eszközről elérhető lesz, amiről internetet tudnak használni.Legmegfelelő operáciosrendszer biztos hog nem IOS</p>
-
-	</li>
-  <li>
-	  <p>Töb nyelvűség későbbi frissítésekben fog majd jönni, ezt meg leet tárgyalni, hogyaz 1.0-ás kiadássa milyen nyelven jöjjön.</p>
-
-	</li>
-  <li>
-	  <p>Külön telefora és asztal gépre less kinézete.</p>
-
-	</li>
-</ul>
-
-<p><br>
-<br>
-
+A Janus rendszer egy böngészőből elérhető webes alkalmazás, amely asztali számítógépen, laptopon, tableten és mobiltelefonon is használható.  
+A rendszer optimálisan működik a legfrissebb Chrome, Edge, Firefox és Safari böngészőkben.  
+Az egyetemi hálózaton belül, valamint VPN-kapcsolaton keresztül is biztonságosan elérhető.
 </p>
+<p>
+A rendszer technológiai alapjai:
+</p>
+<ul>
+  <li>Frontend: HTML5, CSS3, JavaScript (React keretrendszer)</li>
+  <li>Backend: .NET Core REST API</li>
+  <li>Adatbázis: Microsoft SQL Server</li>
+  <li>Hitelesítés: LDAP / SSO</li>
+</ul>
 
 <h2><a name="34"></a>3.4. Illetékesek adatai</h2>
 
-<p><br>
-<br>
-
+<p>
+A Janus rendszer üzemeltetéséért és karbantartásáért az Egyetem Informatikai Központja felelős.  
+Feladataik:
 </p>
+<ul>
+  <li>rendszerfrissítések és verziókezelés,</li>
+  <li>adatbiztonsági ellenőrzések,</li>
+  <li>hibaelhárítás és felhasználói támogatás,</li>
+  <li>adatmentések és visszaállítások kezelése.</li>
+</ul>
 
 <h2><a name="35"></a>3.5. Felhasználók adatai</h2>
 
-<p><br>
-<br>
-
+<p>
+A Janus rendszer különböző típusú felhasználói adatokat kezel, az oktatási és adminisztratív folyamatok támogatása érdekében.
 </p>
-
-<p>Ebben a két alfejezetben lehet rögzíteni azon személyek adatait,
-elérhetőségét, felelősségét, akik a rendszer fejlesztése során az
-adott szerepekben segítik a fejlesztők munkáját.</p>
-
-<p><br>
-<br>
-
-</p>
+<ul>
+  <li>Személyes adatok: név, Neptun-kód, e-mail cím, beiratkozási adatok</li>
+  <li>Tanulmányi adatok: kurzusok, vizsgák, jegyek, kreditpontok</li>
+  <li>Oktatói adatok: tantárgyfelelősség, értékelések, kurzusbeosztás</li>
+  <li>Adminisztratív adatok: jogosultsági szintek, bejelentkezési naplók</li>
+</ul>
+<p>Az adatok védelmét a GDPR előírásainak megfelelő biztonsági protokollok és jogosultságkezelés biztosítja.</p>
 
 <h1><a name="4"></a>4. A végtermék áttekintése</h1>
 
@@ -872,39 +839,25 @@ foglaljuk össze.</p>
 
 <h2>4.1 A termék kapcsolatai</h2>
 
-<p>Itt írhatjuk le, ha a termék több funkcionális komponensből áll.</p>
-
-<p>Ha a termék egy nagyobb rendszer része, le kell írni a helyét a
-nagyobb rendszerben, és a kapcsolódási pontjait, formáit.</p>
-
-<p><br>
-<br>
-
+<p>
+A Janus rendszer szoros kapcsolatban áll több egyetemi alrendszerrel és szolgáltatással, hogy biztosítsa az egységes adatkezelést és hatékony működést.
 </p>
+	<p>A főbb kapcsolódások:</p>
+<ul>
+  <li><b>Tanulmányi adatbázis:</b> tartalmazza a hallgatók, kurzusok és vizsgák adatait, amelyet a Janus közvetlenül használ és frissít.</li>
+  <li><b>Oktatási portál (pl. Moodle):</b> a Janus automatikusan szinkronizálja a kurzusokat és hallgatói beiratkozásokat az e-learning felülettel.</li>
+  <li><b>Pénzügyi rendszer:</b> biztosítja a tandíj- és befizetési információk összekapcsolását a hallgatói fiókkal.</li>
+  <li><b>Felhasználókezelő rendszer (LDAP / SSO):</b> lehetővé teszi az egységes bejelentkezést az egyetemi rendszerek között.</li>
+</ul>
+<p>
+Ezek a kapcsolatok garantálják a gyors adatáramlást, az automatikus frissítéseket és a hibamentes információcserét a különböző egyetemi rendszerek között.
+</p>
+
 
 <h2><a name="42"></a>4.2. A termék használatának előnyei</h2>
 
 <p>
-	A eréket egy olnine iskiolai haladás naplónak sok-sok más plusz funkciókkal kell elképzelni.</p>
-
-<p>Célszerű lehet például egy alábbi táblázat kitöltése:</p>
-<p>
-	Az elönyi diákoknak és tanároknak:
-</p>
-	<ul>
-		<li>
-			olnile elérhetőség
-		</li>
-		<li>átláthatóság</li>
-		<li>egyszerűen kehelhetőség</li>
-	</ul>
-<p>Az előnyei az alkalmazás fenntartóinak:</p>
-	<ul>
-		<li>mint sokan ismerik a "neptun"-t, hozzáképest csak jobb</li>
-	</ul>
-<p><br>
-<br>
-
+Az alábbi táblázat bemutatja a Janus rendszer legfontosabb előnyeit és az azokat támogató funkciókat.
 </p>
 
 <table border="1" bordercolor="#000000" cellpadding="4" cellspacing="0" width="100%">
@@ -935,21 +888,12 @@ nagyobb rendszerben, és a kapcsolódási pontjait, formáit.</p>
 
 			<td width="50%">
 
-      <p>Példa: egyszerűsödik egy értekezlet összehívása</p>
+      <p>Egyszerűbb kurzuskezelés és beiratkozás</p>
 
 			</td>
 
 			<td width="50%">
-
-      <p>Példa:</p>
-
-
-      <p>1. A felhasználóknak lehetőségük van arra, hogy láthassák
-				mások elfoglaltságait.</p>
-
-
-      <p>2. A rendszer automatikusan tud keresni közös szabad időpontot
-				a tervezett résztvevők naptárai alapján.</p>
+      <p>Valós idejű adatfrissítés és automatikus szinkronizáció a kurzusok és vizsgák között.</p>
 
 			</td>
 
@@ -959,17 +903,13 @@ nagyobb rendszerben, és a kapcsolódási pontjait, formáit.</p>
 
 			<td width="50%">
 
-      <p><br>
-
-				</p>
+      <p>Gyorsabb kommunikáció a hallgatók és oktatók között</p>
 
 			</td>
 
 			<td width="50%">
 
-      <p><br>
-
-				</p>
+      <p>Beépített üzenetküldő, értesítési modul és e-mail integráció.</p>
 
 			</td>
 
@@ -979,17 +919,13 @@ nagyobb rendszerben, és a kapcsolódási pontjait, formáit.</p>
 
 			<td width="50%">
 
-      <p><br>
-
-				</p>
+      <p>Csökkentett adminisztrációs teher</p>
 
 			</td>
 
 			<td width="50%">
 
-      <p><br>
-
-				</p>
+      <p>Automatikus adatkapcsolatok az egyetemi rendszerek között (pl. tanulmányi, pénzügyi, oktatási portál).</p>
 
 			</td>
 
@@ -999,17 +935,13 @@ nagyobb rendszerben, és a kapcsolódási pontjait, formáit.</p>
 
 			<td width="50%">
 
-      <p><br>
-
-				</p>
+      <p>Jobb adatbiztonság és megbízhatóság</p>
 
 			</td>
 
 			<td width="50%">
 
-      <p><br>
-
-				</p>
+      <p>SSO alapú bejelentkezés, jogosultságkezelés és biztonsági naplózás.</p>
 
 			</td>
 
@@ -1019,20 +951,26 @@ nagyobb rendszerben, és a kapcsolódási pontjait, formáit.</p>
 
 			<td width="50%">
 
-      <p><br>
-
-				</p>
+      <p>Felhasználóbarát kezelőfelület</p>
 
 			</td>
 
 			<td width="50%">
 
-      <p><br>
-
-				</p>
+      <p>Modern, reszponzív design és egyszerű navigációs logika.</p>
 
 			</td>
 
+		</tr>
+		<tr valign="top">
+			<td width="50%">
+				<p>Könnyebb statisztikai és adminisztratív riportkészítés</p>
+			</td>
+		</tr>
+		<tr valign="top">
+			<td width="50%">
+				<p>Beépített jelentéskészítő és exportálási funkciók (PDF, Excel).</p>
+			</td>
 		</tr>
 
 
