--- a/Vizio(H2).html
+++ b/Vizio(H2).html
@@ -522,7 +522,7 @@ munkafolyamatában.</p>
 
 <h2><a name="31"></a>3.1. Az érintettek összefoglalása</h2>
 
-<p>Célszerű egy alábbi táblázat kitöltése</p>
+
 
 <table border="1" bordercolor="#000000" cellpadding="4" cellspacing="0" width="100%">
 
@@ -643,6 +643,18 @@ munkafolyamatában.</p>
 
 		</tr>
 
+		<tr>
+			<td width="33%">
+				<p>Hallgatók</p>
+			</td>
+			<td>
+				<p>Beiratkozik kurzusokra, jelentkezik vizsgákra, és megtekinti az eredményeit.</p>
+			</td>
+			<td>
+				<p>Tesztelik a végterméket.</p>
+			</td>
+		</tr>
+
 
   </tbody>
 </table>
@@ -654,7 +666,6 @@ munkafolyamatában.</p>
 
 <h2><a name="32"></a>3.2. A felhasználók összefoglalása</h2>
 
-<p>Célszerű egy alábbi táblázat kitöltése</p>
 
 <table border="1" bordercolor="#000000" cellpadding="4" cellspacing="0" width="100%">
 
@@ -966,8 +977,6 @@ Az alábbi táblázat bemutatja a Janus rendszer legfontosabb előnyeit és az a
 			<td width="50%">
 				<p>Könnyebb statisztikai és adminisztratív riportkészítés</p>
 			</td>
-		</tr>
-		<tr valign="top">
 			<td width="50%">
 				<p>Beépített jelentéskészítő és exportálási funkciók (PDF, Excel).</p>
 			</td>
