--- a/Munkanaplo191025.html
+++ b/Munkanaplo191025.html
@@ -26,7 +26,7 @@
 <p style="margin-bottom: 0cm;" align="left"><font style="font-size: 22pt;" size="6">Feladat
 	sorszáma: 1</font></p>
 <p style="margin-bottom: 0cm;" align="left"><font style="font-size: 22pt;" size="6">Feladat
-	címe: CÍM</font></p>
+	címe: Janus webalkalmazás</font></p>
 
 <p style="margin-bottom: 0cm;" align="center"><br></p>
 <p style="margin-bottom: 0cm;" align="center"><br></p>
@@ -135,7 +135,7 @@
 
 <p style="margin-bottom: 0cm;" align="left"><br></p>
 
-<p style="margin-bottom: 0cm;" align="right" lang="hu-HU"><font size="4">2025.10.14.</font></p>
+<p style="margin-bottom: 0cm;" align="right" lang="hu-HU"><font size="4">2025.10.19.</font></p>
 
 <p style="margin-bottom: 0cm;" align="left"><br></p>
 
@@ -218,11 +218,7 @@
 			<p>0.7</p>
 		</td>
 		<td width="19%">
-			<p style="margin-bottom: 0cm;">Kocsán László</p>
-			<p style="margin-bottom: 0cm;">Ujvari Zsombor Balázs</p>
-			<p style="margin-bottom: 0cm;">Vágási Bence</p>
 			<p style="margin-bottom: 0cm;">Héjjas Gyula</p>
-			<p style="margin-bottom: 0cm;">Pocsai Bálint</p>
 		</td>
 		<td width="33%">
 			<p style="margin-bottom: 0cm;">H2 dokumentum</p>
@@ -299,6 +295,23 @@
 		</td>
 		<td width="20%">
 			<p style="margin-bottom: 0cm;">Szótár hozzáadása</p>
+		</td>
+	</tr>
+	<tr valign="top">
+		<td width="15%">
+			<p>2025-10-19</p>
+		</td>
+		<td width="13%">
+			<p>1.5</p>
+		</td>
+		<td width="19%">
+			<p style="margin-bottom: 0cm;">Kocsán László</p>
+		</td>
+		<td width="33%">
+			<p style="margin-bottom: 0cm;">H3, H4, H5 strukturájának létrehozása</p>
+		</td>
+		<td width="20%">
+			<p style="margin-bottom: 0cm;">H3, H4, H5</p>
 		</td>
 	</tr>
 </tbody></table>
