--- a/index.html
+++ b/index.html
@@ -8,11 +8,19 @@
 <body>
   <h1>Betyárbrigantik Szoftvertechnológia</h1>
   <nav>
+  <h2>Dokumentumok</h2>
   <ul>
     <li><a href="Projektterv(H1).html">Projekt terv(H1 feladat)</a></li>
     <li><a href="Vizio(H2).html">Vízió dokumentum(H2 feladat)</a></li>
-    <li><a href="Munkanaplo141025.html">Munkanaplo 2025.10.14.</a></li>
+    <li><a href="SRS(H3).html">SRS dokumentum(H3 feladat)</a></li>
+    <li><a href="AnalizisModell(H4).html">Analízis Modell(H4 feladat)</a></li>
+    <li><a href="RendszerTervezes(H5).html">Rendszer Tervezés(H5 feladat)</a></li>
+  </ul>
+  <h2>Munkanapló</h2>
+  <ul>
+    <li><a href="Munkanaplo191025.html">Munkanapló 2025.10.19.</a></li>
   </ul>
 </nav>
+
 </body>
 </html>
