--- a/Munkanaplo191025.html
+++ b/Munkanaplo191025.html
@@ -1,5 +1,4 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN">
-<!-- saved from url=(0056)https://users.iit.uni-miskolc.hu/~mileff/szt/cimlap.html -->
 <html style="direction: ltr;"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 
 	<title>Munkanapló</title>
@@ -8,11 +7,6 @@
 	<meta name="CHANGEDBY" content="Lajos Ficsor">
 	<meta name="CHANGED" content="20060216;18213498">
 	<style>
-		<!--
-		@page { margin: 2.5cm }
-		P { margin-bottom: 0.21cm }
-		TD P { margin-bottom: 0.21cm }
-		-->
 	</style>
 </head>
 
@@ -150,170 +144,193 @@
 		<col width="86">
 		<col width="51">
 	</colgroup><tbody>
-	<tr valign="top">
-		<td width="15%">
-			<p>Kezdet</p>
-		</td>
-		<td width="13%">
-			<p>Időtartam (óra)</p>
-		</td>
-		<td width="19%">
-			<p>Résztvevők</p>
-		</td>
-		<td width="33%">
-			<p>Tevékenység</p>
-		</td>
-		<td width="20%">
-			<p>Eredmény</p>
-		</td>
-	</tr>
-	<tr valign="top">
-		<td width="15%">
-			<p>2025-09-29</p>
-		</td>
-		<td width="13%">
-			<p>2</p>
-		</td>
-		<td width="19%">
-			<p style="margin-bottom: 0cm;">Kocsán László</p>
-		</td>
-		<td width="33%">
-			<p style="margin-bottom: 0cm;">GitHub repository létrehozása</p>
-			<p style="margin-bottom: 0cm;">Projektterv (H1) struktúrájának létrehozása</p>
-			<p>Munkanapló létrehozása</p>
-		</td>
-		<td width="20%">
-			<p style="margin-bottom: 0cm;">GitHub repository</p>
-			<p style="margin-bottom: 0cm;">Projektterv (H1) dokumentum</p>
-			<p>Munkanapló</p>
-		</td>
-	</tr>
-	<tr valign="top">
-		<td width="15%">
-			<p>2025-10-08</p>
-		</td>
-		<td width="13%">
-			<p>1.5</p>
-		</td>
-		<td width="19%">
-			<p style="margin-bottom: 0cm;">Kocsán László</p>
-			<p style="margin-bottom: 0cm;">Ujvari Zsombor Balázs</p>
-			<p style="margin-bottom: 0cm;">Vágási Bence</p>
-			<p style="margin-bottom: 0cm;">Héjjas Gyula</p>
-			<p style="margin-bottom: 0cm;">Pocsai Bálint</p>
-		</td>
-		<td width="33%">
-			<p style="margin-bottom: 0cm;">Csoportos konzultáció</p>
-		</td>
-		<td width="20%">
-			<p style="margin-bottom: 0cm;">Feladatok elosztása</p>
-			<p style="margin-bottom: 0cm;">Előkészületek a tanári konzultációhoz</p>
-		</td>
-	</tr>
-	<tr valign="top">
-		<td width="15%">
-			<p>2025-10-10</p>
-		</td>
-		<td width="13%">
-			<p>0.7</p>
-		</td>
-		<td width="19%">
-			<p style="margin-bottom: 0cm;">Héjjas Gyula</p>
-		</td>
-		<td width="33%">
-			<p style="margin-bottom: 0cm;">H2 dokumentum</p>
-		</td>
-		<td width="20%">
-			<p style="margin-bottom: 0cm;">H2 dokumentum váza feltöltve</p>
-			<p style="margin-bottom: 0cm;">7-es&9-es szakasz hozzáadva</p>
-		</td>
-	</tr>
-	<tr valign="top">
-		<td width="15%">
-			<p>2025-10-13</p>
-		</td>
-		<td width="13%">
-			<p>1.2</p>
-		</td>
-		<td width="19%">
-			<p style="margin-bottom: 0cm;">Vágási Bence</p>
-		</td>
-		<td width="33%">
-			<p style="margin-bottom: 0cm;">4.3 és 5 szakasz</p>
-		</td>
-		<td width="20%">
-			<p style="margin-bottom: 0cm;"></p>
-			<p style="margin-bottom: 0cm;">4.3 és 5 szakasz hozzáadva</p>
-		</td>
-	</tr>
-	<tr valign="top">
-		<td width="15%">
-			<p>2025-10-13</p>
-		</td>
-		<td width="13%">
-			<p>1.5</p>
-		</td>
-		<td width="19%">
-			<p style="margin-bottom: 0cm;">Kocsán László</p>
-		</td>
-		<td width="33%">
-			<p style="margin-bottom: 0cm;">1 és 2 szakasz értelmezése, feldolgozása</p>
-		</td>
-		<td width="20%">
-			<p style="margin-bottom: 0cm;">Bevezetés és Az alkalmazás helye szakasz hozzáadva</p>
-		</td>
-	</tr>
-	<tr valign="top">
-		<td width="15%">
-			<p>2025-10-14</p>
-		</td>
-		<td width="13%">
-			<p>1</p>
-		</td>
-		<td width="19%">
-			<p style="margin-bottom: 0cm;">Ujvári Zsombor</p>
-		</td>
-		<td width="33%">
-			<p style="margin-bottom: 0cm;">3.3-mas és 4.2-es pontok kidolgozása és kódolása.</p>
-		</td>
-		<td width="20%">
-			<p style="margin-bottom: 0cm;">Felhasználói környezet és A termék használatának előnyei.</p>
-		</td>
-	</tr>
-	<tr valign="top">
-		<td width="15%">
-			<p>2025-10-14</p>
-		</td>
-		<td width="13%">
-			<p>1</p>
-		</td>
-		<td width="19%">
-			<p style="margin-bottom: 0cm;">Pocsai Bálint</p>
-		</td>
-		<td width="33%">
-			<p style="margin-bottom: 0cm;">10. pont kidolgozása.</p>
-		</td>
-		<td width="20%">
-			<p style="margin-bottom: 0cm;">Szótár hozzáadása</p>
-		</td>
-	</tr>
-	<tr valign="top">
-		<td width="15%">
-			<p>2025-10-19</p>
-		</td>
-		<td width="13%">
-			<p>1.5</p>
-		</td>
-		<td width="19%">
-			<p style="margin-bottom: 0cm;">Kocsán László</p>
-		</td>
-		<td width="33%">
-			<p style="margin-bottom: 0cm;">H3, H4, H5 strukturájának létrehozása</p>
-		</td>
-		<td width="20%">
-			<p style="margin-bottom: 0cm;">H3, H4, H5</p>
-		</td>
-	</tr>
+<tr valign="top">
+	<td width="15%">
+		<p>Kezdet</p>
+	</td>
+	<td width="13%">
+		<p>Időtartam (óra)</p>
+	</td>
+	<td width="19%">
+		<p>Résztvevők</p>
+	</td>
+	<td width="33%">
+		<p>Tevékenység</p>
+	</td>
+	<td width="20%">
+		<p>Eredmény</p>
+	</td>
+</tr>
+<tr valign="top">
+	<td width="15%">
+		<p>2025-09-29</p>
+	</td>
+	<td width="13%">
+		<p>2</p>
+	</td>
+	<td width="19%">
+		<p style="margin-bottom: 0cm;">Kocsán László</p>
+	</td>
+	<td width="33%">
+		<p style="margin-bottom: 0cm;">GitHub repository létrehozása</p>
+		<p style="margin-bottom: 0cm;">Projektterv (H1) struktúrájának létrehozása</p>
+		<p>Munkanapló létrehozása</p>
+	</td>
+	<td width="20%">
+		<p style="margin-bottom: 0cm;">GitHub repository</p>
+		<p style="margin-bottom: 0cm;">Projektterv (H1) dokumentum</p>
+		<p>Munkanapló</p>
+	</td>
+</tr>
+<tr valign="top">
+	<td width="15%">
+		<p>2025-10-08</p>
+	</td>
+	<td width="13%">
+		<p>1.5</p>
+	</td>
+	<td width="19%">
+		<p style="margin-bottom: 0cm;">Kocsán László</p>
+		<p style="margin-bottom: 0cm;">Ujvari Zsombor Balázs</p>
+		<p style="margin-bottom: 0cm;">Vágási Bence</p>
+		<p style="margin-bottom: 0cm;">Héjjas Gyula</p>
+		<p style="margin-bottom: 0cm;">Pocsai Bálint</p>
+	</td>
+	<td width="33%">
+		<p style="margin-bottom: 0cm;">Csoportos konzultáció</p>
+	</td>
+	<td width="20%">
+		<p style="margin-bottom: 0cm;">Feladatok elosztása</p>
+		<p style="margin-bottom: 0cm;">Előkészületek a tanári konzultációhoz</p>
+	</td>
+</tr>
+<tr valign="top">
+	<td width="15%">
+		<p>2025-10-10</p>
+	</td>
+	<td width="13%">
+		<p>0.7</p>
+	</td>
+	<td width="19%">
+		<p style="margin-bottom: 0cm;">Héjjas Gyula</p>
+	</td>
+	<td width="33%">
+		<p style="margin-bottom: 0cm;">H2 dokumentum</p>
+	</td>
+	<td width="20%">
+		<p style="margin-bottom: 0cm;">H2 dokumentum váza feltöltve</p>
+		<p style="margin-bottom: 0cm;">7-es&9-es szakasz hozzáadva</p>
+	</td>
+</tr>
+<tr valign="top">
+	<td width="15%">
+		<p>2025-10-13</p>
+	</td>
+	<td width="13%">
+		<p>1.2</p>
+	</td>
+	<td width="19%">
+		<p style="margin-bottom: 0cm;">Vágási Bence</p>
+	</td>
+	<td width="33%">
+		<p style="margin-bottom: 0cm;">4.3 és 5 szakasz</p>
+	</td>
+	<td width="20%">
+		<p style="margin-bottom: 0cm;"></p>
+		<p style="margin-bottom: 0cm;">4.3 és 5 szakasz hozzáadva</p>
+	</td>
+</tr>
+<tr valign="top">
+	<td width="15%">
+		<p>2025-10-13</p>
+	</td>
+	<td width="13%">
+		<p>1.5</p>
+	</td>
+	<td width="19%">
+		<p style="margin-bottom: 0cm;">Kocsán László</p>
+	</td>
+	<td width="33%">
+		<p style="margin-bottom: 0cm;">1 és 2 szakasz értelmezése, feldolgozása</p>
+	</td>
+	<td width="20%">
+		<p style="margin-bottom: 0cm;">Bevezetés és Az alkalmazás helye szakasz hozzáadva</p>
+	</td>
+</tr>
+<tr valign="top">
+	<td width="15%">
+		<p>2025-10-14</p>
+	</td>
+	<td width="13%">
+		<p>1</p>
+	</td>
+	<td width="19%">
+		<p style="margin-bottom: 0cm;">Ujvári Zsombor</p>
+	</td>
+	<td width="33%">
+		<p style="margin-bottom: 0cm;">3.3-mas és 4.2-es pontok kidolgozása és kódolása.</p>
+	</td>
+	<td width="20%">
+		<p style="margin-bottom: 0cm;">Felhasználói környezet és A termék használatának előnyei.</p>
+	</td>
+</tr>
+<tr valign="top">
+	<td width="15%">
+		<p>2025-10-14</p>
+	</td>
+	<td width="13%">
+		<p>1</p>
+	</td>
+	<td width="19%">
+		<p style="margin-bottom: 0cm;">Pocsai Bálint</p>
+	</td>
+	<td width="33%">
+		<p style="margin-bottom: 0cm;">10. pont kidolgozása.</p>
+	</td>
+	<td width="20%">
+		<p style="margin-bottom: 0cm;">Szótár hozzáadása</p>
+	</td>
+</tr>
+<tr valign="top">
+	<td width="15%">
+		<p>2025-10-16</p>
+	</td>
+	<td width="13%">
+		<p>3</p>
+	</td>
+	<td width="19%">
+		<p style="margin-bottom: 0cm;">Kocsán László</p>
+		<p style="margin-bottom: 0cm;">Ujvári Zsombor Balázs</p>
+		<p style="margin-bottom: 0cm;">Vágási Bence</p>
+		<p style="margin-bottom: 0cm;">Héjjas Gyula</p>
+		<p>Pocsai Bálint</p>
+	</td>
+	<td width="33%">
+		<p style="margin-bottom: 0cm;">Projekt Terv dokumentum (H1) teljes áttekintése</p>
+		<p style="margin-bottom: 0cm;">Tartalmi bővítés a 3 A4-es oldal terjedelmének elérése érdekében</p>
+		<p>Végső formai ellenőrzés és tisztázás</p>
+	</td>
+	<td width="20%">
+		<p>Projekt Terv (H1) dokumentum véglegesítve, leadásra kész</p>
+	</td>
+</tr>
+<tr valign="top">
+	<td width="15%">
+		<p>2025-10-19</p>
+	</td>
+	<td width="13%">
+		<p>1.5</p>
+	</td>
+	<td width="19%">
+		<p style="margin-bottom: 0cm;">Kocsán László</p>
+	</td>
+	<td width="33%">
+		<p style="margin-bottom: 0cm;">H3, H4, H5 strukturájának létrehozása</p>
+	</td>
+	<td width="20%">
+		<p style="margin-bottom: 0cm;">H3, H4, H5</p>
+	</td>
+</tr>
 </tbody></table>
 
 
