--- a/Munkanaplo191025.html
+++ b/Munkanaplo191025.html
@@ -331,6 +331,92 @@
 		<p style="margin-bottom: 0cm;">H3, H4, H5</p>
 	</td>
 </tr>
+<tr valign="top">
+	<td width="15%">
+		<p>2025-11-03</p>
+	</td>
+	<td width="13%">
+		<p>1.3</p>
+	</td>
+	<td width="19%">
+		<p style="margin-bottom: 0cm;">Héjjas Gyula</p>
+	</td>
+	<td width="33%">
+		<p style="margin-bottom: 0cm;">H3 - 3. A rendszer funkciói, 4. Használhatóság, 5. Megbízhatóság, 6. Teljesítmény kidolgozása.</p>
+	</td>
+	<td width="20%">
+		<p>3-6. fejezetek véglegesítve.</p>
+	</td>
+</tr>
+
+<tr valign="top">
+	<td width="15%">
+		<p>2025-11-03</p>
+	</td>
+	<td width="13%">
+		<p>0.7</p>
+	</td>
+	<td width="19%">
+		<p style="margin-bottom: 0cm;">Kocsán László</p>
+	</td>
+	<td width="33%">
+		<p style="margin-bottom: 0cm;">H3 - 1. Bevezetés, 2. Áttekintés és 13. Mellékletek fejezeteinek megírása.</p>
+	</td>
+	<td width="20%">
+		<p>1, 2, 13. fejezetek véglegesítve.</p>
+	</td>
+</tr>
+<tr valign="top">
+	<td width="15%">
+		<p>2025-11-03</p>
+	</td>
+	<td width="13%">
+		<p>0.6</p>
+	</td>
+	<td width="19%">
+		<p style="margin-bottom: 0cm;">Pocsai Bálint</p>
+	</td>
+	<td width="33%">
+		<p style="margin-bottom: 0cm;">H3 - 11. Interfészek (alosztályokkal) és 12. Alkalmazott szabványok (alosztályokkal) fejezeteinek részletes kidolgozása.</p>
+	</td>
+	<td width="20%">
+		<p>11. és 12. fejezetek véglegesítve.</p>
+	</td>
+</tr>
+<tr valign="top">
+	<td width="15%">
+		<p>2025-11-03</p>
+	</td>
+	<td width="13%">
+		<p>0.5</p>
+	</td>
+	<td width="19%">
+		<p style="margin-bottom: 0cm;">Ujvári Zsombor Balázs</p>
+	</td>
+	<td width="33%">
+		<p style="margin-bottom: 0cm;">H3 - 8. Tervezési korlátozások és 9. On-line dokumentáció és Help rendszer fejezeteinek kidolgozása.</p>
+	</td>
+	<td width="20%">
+		<p>8. és 9. fejezetek véglegesítve.</p>
+	</td>
+</tr>
+<tr valign="top">
+	<td width="15%">
+		<p>2025-11-03</p>
+	</td>
+	<td width="13%">
+		<p>0.5</p>
+	</td>
+	<td width="19%">
+		<p style="margin-bottom: 0cm;">Vágási Bence</p>
+	</td>
+	<td width="33%">
+		<p style="margin-bottom: 0cm;">H3 - 10. Felhasznált kész komponensek fejezetének és 7. Támogatottság fejezeteinek részletes kidolgozása. Végső formai ellenőrzés.</p>
+	</td>
+	<td width="20%">
+		<p>10. fejezet véglegesítve.</p>
+	</td>
+</tr>
 </tbody></table>
 
 
