--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <li><a href="SRS(H3).html">SRS dokumentum(H3 feladat)</a></li>
     <li><a href="AnalizisModell(H4).html">Analízis Modell(H4 feladat)</a></li>
     <li><a href="RendszerTervezes(H5).html">Rendszer Tervezés(H5 feladat)</a></li>
+    <li><a href="Szótár.html">Szótár</a></li>
   </ul>
   <h2>Munkanapló</h2>
   <ul>
