--- a/Munkanaplo191025.html
+++ b/Munkanaplo191025.html
@@ -414,7 +414,7 @@
 		<p style="margin-bottom: 0cm;">H3 - 10. Felhasznált kész komponensek fejezetének és 7. Támogatottság fejezeteinek részletes kidolgozása. Végső formai ellenőrzés.</p>
 	</td>
 	<td width="20%">
-		<p>10. fejezet véglegesítve.</p>
+		<p>7. és 10. fejezet véglegesítve.</p>
 	</td>
 </tr>
 </tbody></table>
