--- a/AnalizisModell(H4).html
+++ b/AnalizisModell(H4).html
@@ -128,7 +128,7 @@
 
 <p style="margin-bottom: 0cm;" align="left"><br></p>
 
-<p style="margin-bottom: 0cm;" align="right" lang="hu-HU"><font size="4">2025.10.19.</font></p>
+<p style="margin-bottom: 0cm;" align="right" lang="hu-HU"><font size="4">2025.11.18.</font></p>
 
 <p style="margin-bottom: 0cm;" align="center"><br></p>
 
@@ -381,7 +381,7 @@
 <p>
     Az alábbi hivatkozás az Analízis Modell végleges osztálydiagramjára mutat, amely tartalmazza a pontosított kapcsolatokat, az attribútumokat és a legfontosabb operációkat.
 </p>
-<p align="center">1. ábra: Tanulmányi Alrendszer Analízis Modell Osztálydiagram</p>
+<p align="center">1. ábra: <a href="diagramsz/classdiagram.png">Tanulmányi Alrendszer Analízis Modell Osztálydiagram</a></p>
 <p>
     A diagram természetesen tartalmaz olyan kapcsolatokat is, amely egy másik alrendszer osztályához mutat. Ilyenkor a külső osztálynak is kell szerepelnie az ábrán, de a leírása nem itt, hanem az adott alrendszernél szerepel.
 </p>
@@ -990,8 +990,6 @@
 <p>&nbsp;</p>
 
 <h1><a name="melleklet"></a>X. Mellékletek</h1>
-
-<p>Ide kerülhetnek a szövegközi ábrának túl nagy osztálydiagramok, és minden más, ami a dokumentumot teljesebbé teheti.</p>
 
 <p>1. ábra - Analízis modell osztálydiagramja</p>
 <img src="diagramsz/classdiagram.png" style="width:100%" alt="Analízis osztálydiagram diagram">
