--- a/Munkanaplo021225.html
+++ b/Munkanaplo021225.html
@@ -129,7 +129,7 @@
 
 <p style="margin-bottom: 0cm;" align="left"><br></p>
 
-<p style="margin-bottom: 0cm;" align="right" lang="hu-HU"><font size="4">2025.10.19.</font></p>
+<p style="margin-bottom: 0cm;" align="right" lang="hu-HU"><font size="4">2025.12.02.</font></p>
 
 <p style="margin-bottom: 0cm;" align="left"><br></p>
 
@@ -605,6 +605,23 @@
     </td>
     <td width="20%">
         <p style="margin-bottom: 0cm;">H5 dokumentum véglegesítve, leadásra kész.</p>
+    </td>
+</tr>
+<tr valign="top">
+    <td width="15%">
+        <p>2025-12-02</p>
+    </td>
+    <td width="13%">
+        <p>1</p>
+    </td>
+    <td width="19%">
+        <p style="margin-bottom: 0cm;">Kocsán László</p>
+    </td>
+    <td width="33%">
+        <p style="margin-bottom: 0cm;">Értékelés Táblázat létrehozása</p>
+    </td>
+    <td width="20%">
+        <p style="margin-bottom: 0cm;">Értékelés Táblázat dokumentum</p>
     </td>
 </tr>
 </tbody></table>
