--- a/index.html
+++ b/index.html
@@ -15,10 +15,15 @@
     <li><a href="SRS(H3).html">SRS dokumentum(H3 feladat)</a></li>
     <li><a href="AnalizisModell(H4).html">Analízis Modell(H4 feladat)</a></li>
     <li><a href="RendszerTervezes(H5).html">Rendszer Tervezés(H5 feladat)</a></li>
+    <li><a href="Szótár.html">Szótár</a></li>
   </ul>
   <h2>Munkanapló</h2>
   <ul>
-    <li><a href="Munkanaplo241125.html">Munkanapló 2025.11.24.</a></li>
+    <li><a href="Munkanaplo021225.html">Munkanapló 2025.12.02.</a></li>
+  </ul>
+  <h2>Értékelés Táblázat</h2>
+  <ul>
+    <li><a href="ErtekelesTablazat.html">Értékelés Táblázat</a></li>
   </ul>
 </nav>
 
