--- a/SRS(H3).html
+++ b/SRS(H3).html
@@ -1067,11 +1067,25 @@
 	</li>
 </ul>
 
+
+	<h1><a name="10"></a>13. Szótár</h1>
+<p><strong>SRS (Software Requirements Specification):</strong> Szoftverkövetelmény-specifikáció; a rendszer követelményeit leíró dokumentum.</p>
+<p><strong>Use Case:</strong> Használati eset; egy funkció részletes leírása szereplők és lépések szerint.</p>
+<p><strong>Main Flow:</strong> Fő folyamat; a használati eset alapvető, sikeres lefutása.</p>
+<p><strong>Alternate Flow:</strong> Alternatív folyamat; a fő folyamattól eltérő, de érvényes működési útvonal.</p>
+<p><strong>Exception Flow:</strong> Kivételkezelő folyamat; hibák vagy rendkívüli esetek kezelése.</p>
+<p><strong>MySQL:</strong> Nyílt forráskódú relációs adatbázis-kezelő rendszer.</p>
+<p><strong>SSO (Single Sign-On):</strong> Egységes bejelentkezés; egyetlen azonosítással több szolgáltatás érhető el.</p>
+<p><strong>Scrum:</strong> Agilis fejlesztési módszertan.</p>
+<p><strong>Technológiai stack:</strong> A projektben használt technológiák összessége.</p>
+<p><strong>Modul:</strong> A rendszer egy funkcionális egysége.</p>
+<p><strong>Interfész:</strong> Kapcsolódási felület két rendszer vagy komponens között.</p>
+<p><strong>Komponens:</strong> Önállóan működő részegység egy szoftveren belül.</p>
 <p><br>
 	<br>
 </p>
 
-<h1 class="western"><a name="melleklet"></a>13.Mellékletek</h1>
+<h1 class="western"><a name="melleklet"></a>14.Mellékletek</h1>
 
 <p>A dokumentum áttekinthetőségét segítő és a fejlesztés egyéb, kapcsolódó dokumentumaira való hivatkozások helye.</p>
 <ul>
@@ -1092,5 +1106,10 @@
 <p><br>
 	<br>
 </p>
+
+
+
+
+	
 
 </body></html>
